# madjack

./: .gitignore  ChangeLog  INSTALL  LICENSE.md  Makefile.am  README  TODO  autogen.sh  configure.ac  configure.in  control.c  control.h  maddecode.c  maddecode.h  madjack-remote.c  madjack.c  madjack.h  madjack_remote.c  mjlo.c  mjlo.h  mjosc.c  mjosc.h
doc/: state_diagram.graffle
gui/: LCDTime.cpp  LCDTime.h  Makefile.am  QMadJACK.cpp  QMadJACK.h  QMadJACKMainWindow.cpp  QMadJACKMainWindow.h  QMadJACKWidget.cpp  QMadJACKWidget.h  main.cpp  qmadjack.pro  test.cpp
perl/: Build.PL  Changes  MANIFEST  README  crap-jukebox.pl  madjack-remote.pl
perl/lib/Audio/: MadJACK.pm
src/: Makefile.am  control.c  control.h  maddecode.c  maddecode.h  madjack-osc-remote.c  madjack-remote.c  madjack.c  madjack.h  mjosc.c  mjosc.h
