# Process this file with autoconf to produce a configure script.
AC_INIT(madjack.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(madjack, 0.1)

# Check for C compiler
AC_PROG_CC
AC_C_CONST

# Checks for libraries.
AC_CHECK_LIB([pthread], [pthread_self], , [AC_MSG_ERROR(You need libpthread installed)])
AC_CHECK_LIB([m], [sqrt], , [AC_MSG_ERROR(Can't find libm)])
AC_CHECK_LIB([mx], [powf])

# Check for JACK (need 0.100.0 for jack_client_open)
PKG_CHECK_MODULES(JACK, jack >= 0.100.0)

# Check for LibMAD
PKG_CHECK_MODULES(MAD, mad)

# Check for LibLO
PKG_CHECK_MODULES(LIBLO, liblo)


# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for functions.
AC_CHECK_FUNCS( usleep )

AC_OUTPUT([Makefile])

